--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -7,12 +7,12 @@
     <title>Meu primeiro programa...</title>
     <style>
         body {
-            background-color: rgb(105, 105, 173);
+            background-color: #EDA8A8;
             color: white;
             font: normal 20pt Arial;
         }
         h1 {
-            color: rgb(255, 212, 22);
+            color: #484659;
         }
     </style>
 </head>
