Adicionado nota e sua estilização

--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Módulo B</title>
     <style>
         body {
             background-color: #eda8a88e;
+            color: white;
+        }
+
+        .nota {
+            font: 20pt Arial;
+            color: #5d2e2e;
+        }
+
+        li {
+            font: normal 15pt Arial;
+            color: #5d2e2e;
+        }
+
+        .resultado {
+            font: 20pt Arial;
+            text-decoration: underline;
+            color: #5d2e2e;
         }
 
         .info_nome {
-            color: white;
             font: normal 20pt Arial;
             margin: auto;
             align-items: center;
             text-align: center;
-
         }
 
         .borda {
@@ -32,7 +47,17 @@
         }
     </style>
 </head>
-<body>
+<body> 
+    <p class="nota">
+        Nota aula 6: Tratamento de dados.
+        <li>Manipulação de dados em JS;</li>
+        <li>Conversão de String para Number;</li>
+        <li>Formatação de número para valor monetário.</li>
+    </p>
+    
+    <p class="resultado">
+        Resultado:
+    </p>
     <div class="info_nome borda">
         <script>
             var nome = window.prompt('Qual é o seu nome?')
